Add testgtk for the new widgets in 3.12
Add support for Glib.Object.Bind_Property
N606-015

--- a/testgtk/testgtk.css
+++ b/testgtk/testgtk.css
@@ -13,3 +13,8 @@ GtkTreeView *:hover {
 .notebook :active {
    background-image:none;
 }
+
+/* For the stack switch, to call attention to a child */
+.needs-attention {
+   color: red;
+}
