Added test for gestures.
Long_Press works fine, but zoom does not seem to work with Mac
touchpads.

Change-Id: I1422e0b75cec553dc02702dd6fb714f698df8a11

--- a/testgtk/testgtk.css
+++ b/testgtk/testgtk.css
@@ -1,3 +1,4 @@
+/*
 .notebook tab {
    background-image: -gtk-gradient (linear, left top, left bottom, from(#999), to(#fff));
 }
@@ -10,9 +11,11 @@ GtkNotebook .active {
 GtkTreeView *:hover {
    color: #009900;
 }
+
 .notebook :active {
    background-image:none;
 }
+*/
 
 /* For the stack switch, to call attention to a child */
 .needs-attention {
