Fix css_accordion.css issues: (testgtk): Gtk-WARNING: Theme parsing error: css_accordion.css:10:13: The 'icon-shadow' property has been renamed to '-gtk-icon-shadow' (testgtk): Gtk-WARNING: Theme parsing error: css_accordion.css:54:8: The 'engine' property is ignored (testgtk): Gtk-WARNING: Theme parsing error: css_accordion.css:57:31: The style property GtkWidget:focus-line-width is deprecated and shouldn't be used anymore. It will be removed in a future version (testgtk): Gtk-WARNING: Theme parsing error: css_accordion.css:58:28: The style property GtkWidget:focus-padding is deprecated and shouldn't be used anymore. It will be removed in a future version (testgtk): Gtk-WARNING: Theme parsing error: css_accordion.css:59:28: The style property GtkNotebook:initial-gap is deprecated and shouldn't be used anymore. It will be removed in a future version (testgtk): Gtk-WARNING: Theme parsing error: css_accordion.css:66:24: Using Pango syntax for the font: style property is deprecated; please use CSS syntax Failed to load css_accordion.css ! css_accordion.css:66:10not a number

--- a/testgtk/css_accordion.css
+++ b/testgtk/css_accordion.css
@@ -7,7 +7,7 @@
   font-variant: inherit;
   font-weight: inherit;
   text-shadow: inherit;
-  icon-shadow: inherit;
+  -gtk-icon-shadow: inherit;
   box-shadow: initial;
   margin-top: initial;
   margin-left: initial;
@@ -51,19 +51,19 @@
   transition-duration: initial;
   transition-timing-function: initial;
   transition-delay: initial;
-  engine: initial;
-  gtk-key-bindings: initial;
 
-  -GtkWidget-focus-line-width: 0;
-  -GtkWidget-focus-padding: 0;
-  -GtkNotebook-initial-gap: 0;
+  -gtk-key-bindings: initial;
+
+
+
+
 }
 
 * {
     transition-property: color, background-color, border-color, background-image, padding, border-width;
     transition-duration: 0.2s;
 
-    font: Cantarell 20px;
+    font: 20px Cantarell;
 }
 
 GtkWindow {
